<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E837A"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="433dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/campfire_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="288dp"
        android:layout_height="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="33dp"
        android:text="@string/campsite_commander"
        android:textColorLink="#1D1D1B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="39dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="22dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtItem"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="21dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCategory"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edtComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="179dp"
        android:layout_height="35dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_gear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtComments" />

    <Button
        android:id="@+id/btnSecond"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="9dp"
        android:text="@string/second_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_to_base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSecond" />
</androidx.constraintlayout.widget.ConstraintLayout>