<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#859078"
    tools:context=".secondScreen">

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="64dp"
        android:text="@string/display_gear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQuantity"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="13dp"
        android:text="@string/show_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplay" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuantity" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="316dp"
        android:layout_height="444dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/output_items"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit" />
</androidx.constraintlayout.widget.ConstraintLayout>